--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
-chrono = { version = "0.4.43", features = ["serde"] }
+dashmap = "6.1.0"
+parking_lot = "0.12.5"
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
+time = { version = "0.3.45", features = ["serde"] }
 tokio = { version = "1.49.0", features = ["full"] }
 uuid = { version = "1.19.0", features = ["serde", "v7"] }
