--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.101"
 async-trait = "0.1.89"
 dashmap = "6.1.0"
 parking_lot = "0.12.5"
