--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1.89"
 dashmap = "6.1.0"
 parking_lot = "0.12.5"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 thiserror = "2.0.17"
 time = { version = "0.3.45", features = ["serde"] }
 tokio = { version = "1.49.0", features = ["full"] }
