--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
   - repo: local
     hooks:
-      - id: rust-clippy
+      - id: clippy
         name: clippy
         description: Run clippy on Rust files to catch common mistakes.
         entry: cargo clippy --workspace --all-targets --all-features -- -D warnings
